--- a/personal_assistants/templates/personal_assistants/index.html
+++ b/personal_assistants/templates/personal_assistants/index.html
@@ -2,14 +2,25 @@
 <html>
     <head>
         <title>MY PROJECT</title>
+
+        <link rel="shortcut icon" type="image/png" href="{% static 'images/favicon.ico' %}"/>
+
+
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+          
     </head>
-    <body>
-        <div>
-            <a href="{% url 'tasks_new' %}" >Create tasks</a>
-
-            <h1><a href="/tasks">Main page</a></h1>
+    
+    <nav>
+        <div class="nav nav-pills nav-fill" id="nav-tab" role="tablist">
+          <a class="nav-item nav-link active"  data-toggle="tab" href="/tasks" role="tab" aria-selected="true">Main page</a>
+          <a class="nav-item nav-link"  data-toggle="tab" href="{% url 'tasks_new' %}" role="tab" aria-selected="true">Create tasks</a>
+          <a class="nav-item nav-link"  data-toggle="tab" href="#old_tasks" role="tab" aria-selected="true">Old tasks</a>
         </div>
+    </nav>
 
+    <body>
         {% block content %}
         {% endblock %}
     </body>
