--- a/personal_assistants/templates/personal_assistants/tasks_detail.html
+++ b/personal_assistants/templates/personal_assistants/tasks_detail.html
@@ -1,13 +1,14 @@
 {% extends 'personal_assistants/index.html' %}
 
 {% block content %}
-    <div>
-        <p>{{ task.created_at }}</p>
-        <h1>{{ task.title }}</h1>
+    <div class="container">
+        <br><h1>{{ task.title }} {{ task.state }}</h1>
         <p>{{ task.description|linebreaksbr }}</p>
+        <p>{{ task.created_at }}</p>
+
+        <form method="post">
+            {% csrf_token %}
+            <input type="submit" value="Finish" />
+        </form>
     </div>
-    <form method="post">
-        {% csrf_token %}
-        <input type="submit" value="Submit" />
-    </form>
 {% endblock %}
