--- a/personal_assistants/templates/personal_assistants/tasks_detail.html
+++ b/personal_assistants/templates/personal_assistants/tasks_detail.html
@@ -5,9 +5,9 @@
         <br><h1>{{ task.title }} {{ task.state }}</h1>
         <p>{{ task.description|linebreaksbr }}</p>
         <p>{{ task.created_at }}</p>
-        <form  action="tasks.html" method="post">{% csrf_token %}
+        <!-- <form  action="tasks.html" method="post">{% csrf_token %}
             <button>Finish</button>
-        </form>
+        </form> -->
     </div>
 {% endblock %}
 
