Before rewriting FormsForm  in ModelForm

--- a/personal_assistants/templates/personal_assistants/category.html
+++ b/personal_assistants/templates/personal_assistants/category.html
@@ -6,9 +6,10 @@
 {% for cat in categs %}
 <div class="container">
     <div>
-    
-        <br><h1><a href="{% url 'category_detail' pk=cat.pk %}">{{ cat.name }}</a></h1>
+        <center><a href="{% url 'category_edit' pk=cat.pk %}">+Edit</a></center>
+        <br><h1><a href="{% url 'category_detail' pk=cat.pk %}">{{ cat.name }}</a></h1> 
         <hr class="style13">
+        
             <style>
             hr.style13 {
                 height: 10px;
