--- a/personal_assistants/templates/personal_assistants/category_edit.html
+++ b/personal_assistants/templates/personal_assistants/category_edit.html
@@ -2,9 +2,9 @@
 
 {% block content %}
     <h1>Edit category:</h1>
-    <form>
+    <form method="POST" >
         {% csrf_token %}
-        {{ category_form.as_p }}
+        {{ form.as_p }}
         <input type="submit" value="Update">
     </form>
 {% endblock %}
