--- a/personal_assistants/templates/personal_assistants/category.html
+++ b/personal_assistants/templates/personal_assistants/category.html
@@ -7,7 +7,8 @@
 <div class="container">
     <div>
         <center><a href="{% url 'category_edit' pk=cat.pk %}">+Edit</a></center>
-        <br><h1><a href="{% url 'category_detail' pk=cat.pk %}">{{ cat.name }}</a></h1> 
+        <br><h1><a href="{% url 'category_detail' pk=cat.pk %}">{{ cat.name }}</a></h1>
+        <div align='right'><a href="{% url 'category_delete' pk=cat.pk %}">Delete</a></div> 
         <hr class="style13">
         
             <style>
